AUGREL/src/objects/TFS_Activity__c.object
<CustomObject>
    <fields>
        <fullName>New_Care_Of__c</fullName>
        <label>New Care Of</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_City__c</fullName>
        <label>New City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Email_Address__c</fullName>
        <label>New Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Home_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Home Number DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Home_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Home Number INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Home_Number_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Home Number MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Home_Number_Status__c</fullName>
        <description>Added as part of Strikeiron Integration</description>
        <label>New Home Number Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Home_Number__c</fullName>
        <label>New Home Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Identity_Theft_Indicator_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Identity Theft Indicator Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Mobile_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Mobile Number DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Mobile_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Mobile Number INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Mobile_Number_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: SFDC
INT: Informatica UCM Update 
Trans: N 
BU: Legal and Compliance requirements for TFS auto dialer 
FD: This field is used to save the new value of the field &apos;Mobile Phone is Mobile&apos; from FAC object (CP 2401)</description>
        <label>New Mobile Number MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Mobile_Number_Status__c</fullName>
        <description>Added as part of Strikeiron Integration</description>
        <label>New Mobile Number Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Mobile_Number__c</fullName>
        <description>For Service Request field change.</description>
        <label>New Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Service_branch__c</fullName>
        <label>New Military Service Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Air Force Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Force Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coast Guard Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine Corps Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marines Corps Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy Active Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Servicing_Email_Hygiene_Result__c</fullName>
        <description>Added as part of Strike Iron Integration

New_Servicing_Email_Hygiene_Result</description>
        <label>New Servicing Email Hygiene Result</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Servicing_Email_Status__c</fullName>
        <description>Added as part of Strike Iron Integration

New Servicing Email Status</description>
        <label>New Servicing Email Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Servicing_Email_Timestamp__c</fullName>
        <description>Added as part of Strike Iron Integration

New Servicing Email Timestamp</description>
        <label>New Servicing Email Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Servicing_Email__c</fullName>
        <label>New Servicing Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_State__c</fullName>
        <label>New State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Work_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Work Number DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Work_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Work Number INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Work_Number_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Work Number MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Work_Number_Status__c</fullName>
        <description>Added as part of Strike Iron Integration</description>
        <label>New Work Number Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Work_Number__c</fullName>
        <label>New Work Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Zip_Code_Extn__c</fullName>
        <label>New Zip Code Extn</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Zipcode__c</fullName>
        <label>New Zipcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to capture if the customer is interested in the offer</description>
        <label>Not Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Flag__c</fullName>
        <label>Online Flag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Payment_Date__c</fullName>
        <description>Original payment date payment was made</description>
        <inlineHelpText>Original payment date payment was made</inlineHelpText>
        <label>Original Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Consent__c</fullName>
        <description>Business rules exist</description>
        <label>Overall Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>Payment Amount from the Western Union Payment Screen</description>
        <inlineHelpText>Payment Amount from the Western Union Payment Screen</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>Payment Date from the Western Union Payment Screen</description>
        <inlineHelpText>Payment Date from the Western Union Payment Screen</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Not_Received_Email__c</fullName>
        <description>Business rules exist (Currently 1 field exists for email &amp; text)</description>
        <label>Payment Not Received Email</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Not_Received_Text__c</fullName>
        <label>Payment Not Received Text</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Received_Email__c</fullName>
        <description>Business rules exist (Currently 1 field exists for email &amp; text)</description>
        <label>Payment Received Email</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Received_Text__c</fullName>
        <label>Payment Received Text</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Reminder_Day__c</fullName>
        <label>Payment Reminder Day</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Reminder_Email__c</fullName>
        <label>Payment Reminder Email</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Reminder_Text__c</fullName>
        <label>Payment Reminder Text</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payoff_Quote__c</fullName>
        <label>Payoff Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Diem__c</fullName>
        <description>From FA</description>
        <label>Per Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact__c</fullName>
        <label>Preferred Contact</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Process_Date__c</fullName>
        <description>Current date</description>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Processing_Associate__c</fullName>
        <description>Processing Associate ID from the Western Union Payment Screen</description>
        <inlineHelpText>Processing Associate ID from the Western Union Payment Screen</inlineHelpText>
        <label>Processing Associate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_III__c</fullName>
        <label>Program III</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_II__c</fullName>
        <label>Program II</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_I__c</fullName>
        <label>Program I</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Opt__c</fullName>
        <label>Purchase Opt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_To__c</fullName>
        <label>Quoted To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <description>This field is required by TIBCO integration</description>
        <label>Recipient</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <description>Refund Amount</description>
        <inlineHelpText>Refund Amount</inlineHelpText>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <description>Name associated with the Contact that is selected when the Activityis created. Can be Dealer Name, Bank/Ins Name, or Relationship depending on the Contact Type selected. This field will not be populated if the Primary Borrower or Co-Borrower call.</description>
        <inlineHelpText>Name associated with the Contact that is selected when the Activity is created. Can be Dealer Name, Bank/Ins Name, or Relationship depending on the Contact Type selected.</inlineHelpText>
        <label>Relationship Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual_Value__c</fullName>
        <label>Residual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Response_Date_Due__c</fullName>
        <label>Response Date Due</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_First_Name__c</fullName>
        <description>Of borrower requesting the service</description>
        <label>SR First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Last_Name_Business_Name__c</fullName>
        <description>Of borrower requesting the service</description>
        <label>SR Last Name Business Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Recipient__c</fullName>
        <label>Service Recipient</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Category__c</fullName>
        <label>Service Request Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_User_Group__c</fullName>
        <label>Service Request User Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Result__c</fullName>
        <label>Service Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <inlineHelpText>How contact was made with customer.</inlineHelpText>
        <label>Service Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Correspondence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Created_By__c</fullName>
        <defaultValue>$User.Lan_Id__c</defaultValue>
        <label>Source Created By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Created_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Source Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Source_System_Created_By__c</fullName>
        <defaultValue>&quot;SFDC&quot;</defaultValue>
        <label>Source System Created By </label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StarsSRNumber__c</fullName>
        <label>StarsSRNumber</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TFS_LFS_Dealer_Privacy__c</fullName>
        <label>TFS/LFS Dealer Privacy</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TFS_LFS_Information_Email_Address__c</fullName>
        <description>This field is required by TIBCO integration</description>
        <label>TFS LFS Information Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telemarketing_Privacy__c</fullName>
        <label>Telemarketing Privacy</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Party_Privacy__c</fullName>
        <label>Third Party Privacy</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>This is the Topic field that is used the ACT combination been leveraged for TFS</description>
        <label>Topic</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Affiliate Marketing Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Preference Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit App/Rpt Flag Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing Flag Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Request Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1099</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Flag Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account History Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address/Phone/Name Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address/Phone/Name Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Privacy Election Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Letter Flag Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autocheque Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autocheque Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autocheque Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Statement Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2P Bank Account Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2P Consents Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2P Email Address Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2P Password Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2P Payment Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2P Registration Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2P User ID Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call From Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warm_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warm Transfer</label>
        <type>Checkbox</type>
    </fields>
    <label>Activity</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <recordTypes>
        <fullName>Customer_Profile_Change</fullName>
        <active>true</active>
        <description> This RT is leveraged to create Activities for Customer Profile Change.</description>
        <label>Customer Profile Change Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Activity</fullName>
        <active>true</active>
        <description>This RT is used to send Loyalty leads to STAR. As there is no lifecycle creating as a activity</description>
        <label>Lead Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>TFS_Activity</fullName>
        <active>true</active>
        <description>General Activity Type.  Not u</description>
        <label>TFS Activity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Activity_Cannot_be_updated_after_5_mins</fullName>
        <active>true</active>
        <errorConditionFormula>AND(((Now()-CreatedDate)&gt;0.0035),NOT(OR( $Profile.Name =&apos;System Administrator&apos;,$Profile.Name=&apos;System Administrator Clone&apos; )) )</errorConditionFormula>
        <errorMessage>Activity cannot be updated once its created</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_required_for_Make_a_Payment</fullName>
        <active>true</active>
        <description>A Description is required for Making a Payment Activity</description>
        <errorConditionFormula>AND(
ISBLANK( Description__c  ),
NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>The Activity details must be entered into the Activity Description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preferred_Contact_required_for_Callact</fullName>
        <active>true</active>
        <description>A Description is required for Making a Payment Activity</description>
        <errorConditionFormula>AND(
ISBLANK(  Preferred_Contact__c   ),
NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),ISPICKVAL(Action__c,&apos;Call to Action&apos;),ISPICKVAL(Category__c,&apos;Loyalty/Retention&apos;) 
)</errorConditionFormula>
        <errorMessage>Preferred Contact is a required Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Lead_vs_Non_Interested</fullName>
        <active>true</active>
        <description>For Call to Action Topic you need to select either Sales Lead or Not Interested</description>
        <errorConditionFormula>OR(AND(ISPICKVAL(Action__c,&apos;Call To Action&apos;), ISPICKVAL(Category__c,&apos;Loyalty/Retention&apos;),NOT(OR(Data_Consent__c, Not_Interested__c))),AND(ISPICKVAL(Action__c,&apos;Call To Action&apos;), ISPICKVAL(Category__c,&apos;Loyalty/Retention&apos;),AND(Data_Consent__c, Not_Interested__c)))</errorConditionFormula>
        <errorMessage>You need to select either Not Interested or Sales Lead Consent</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UC_RequiredFields</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
ISBLANK(Action__c),
ISBLANK(Category__c),
ISBLANK(Topic__c),
ISBLANK(Description__c)
)</errorConditionFormula>
        <errorMessage>Please complete all available fields on this screen.</errorMessage>
    </validationRules>
</CustomObject>